minio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: minio-gateway
  # namespace: tools
spec:
  selector:
    istio: ingressgateway
  servers:
    # - port:
    #     number: 80
    #     name: tcp
    #     protocol: TCP
    #   hosts:
    #     - "minio-api.rpolnx.local"
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "minio.rpolnx.local"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: minio-cert
      hosts:
        - "minio.rpolnx.local"
